--- a/default.config.yml
+++ b/default.config.yml
@@ -43,6 +43,7 @@ homebrew_installed_packages:
   - httpie
   - iperf
   - jq
+  - kubectx
   - kubernetes-cli
   - kubernetes-helm
   - libevent
@@ -61,6 +62,7 @@ homebrew_installed_packages:
   - shellcheck
   - sqlite
   - ssh-copy-id
+  - stern
   - terraform
   - terraform_landscape
   - tflint
