--- a/default.config.yml
+++ b/default.config.yml
@@ -31,6 +31,7 @@ homebrew_installed_packages:
   - cf-cli   # cloud foundry cli tools
   - coreutils
   - cowsay
+  - derailed/k9s/k9s
   - direnv
   - dive
   - git
