--- a/requirements.yml
+++ b/requirements.yml
@@ -1,4 +1,7 @@
 ---
-- name: geerlingguy.dotfiles
-- name: geerlingguy.homebrew
-- name: geerlingguy.mas
+collections:
+  - name: geerlingguy.mac
+
+roles:
+  - name: geerlingguy.dotfiles
+  - name: geerlingguy.mas
