--- a/main.yml
+++ b/main.yml
@@ -10,66 +10,76 @@
       with_fileglob:
         - ../config.yml
       tags: ['always']
-
-  roles:
-    - role: geerlingguy.mac.homebrew
-      tags: ['homebrew']
-    - role: geerlingguy.dotfiles
+    - name: directory set up
+      ansible.builtin.file:
+        path: "{{ item }}"
+        state: directory
+      loop:
+        - ~/.aws/cli
+        - ~/.config/powerline
+        - ~/.config/alacritty
+        - ~/.config/kitty
       when: configure_dotfiles
-      tags: ['dotfiles']
-    - role: geerlingguy.mas
-      when: mas_installed_apps
-      tags: ['mas']
+
+  # roles:
+  #   - role: geerlingguy.mac.homebrew
+  #     tags: ['homebrew']
+  #   - role: geerlingguy.dotfiles
+  #     when: configure_dotfiles
+  #     tags: ['dotfiles']
+  #   - role: geerlingguy.mas
+  #     when: mas_installed_apps
+  #     tags: ['mas']
 
   tasks:
-    - include: tasks/ansible-setup.yml
+    - include_tasks: tasks/ansible-setup.yml
 
-    - include: tasks/sudoers.yml
+    - include_tasks: tasks/sudoers.yml
       when: configure_sudoers
 
-    - include: tasks/terminal.yml
+    - include_tasks: tasks/terminal.yml
       when: configure_terminal
       tags: ['terminal']
 
-    - include: tasks/chef.yml
-      when: configure_chef
-      tags: ['chef']
-
-    - include: tasks/vim.yml
-      when: configure_vim
-      tags: ['vim']
-
-    - include: tasks/vscode.yml
-      when: configure_vscode
-      tags: ['vscode']
-
-    - include: tasks/osx.yml
+    - include_tasks: tasks/osx.yml
       when: configure_osx
       tags: ['osx']
 
-    - include: tasks/gpg.yml
+    - include_tasks: tasks/vim.yml
+      when: configure_vim
+      tags: ['vim']
+
+    - include_tasks: tasks/vscode.yml
+      when: configure_vscode
+      tags: ['vscode']
+
+    - include_tasks: tasks/gpg.yml
       tags: ['gpg']
 
-    - include: tasks/zsh.yml
+    - include_tasks: tasks/zsh.yml
       tags: ['zsh']
 
-    - include: tasks/aws.yml
+    - include_tasks: tasks/aws.yml
       when: configure_aws
       tags: ['aws']
 
-    - include: tasks/helm-plugins.yml
+    - include_tasks: tasks/helm-plugins.yml
       when: configure_helm
       tags: ['helm']
 
-    - include: tasks/krew-plugins.yml
+    - include_tasks: tasks/krew-plugins.yml
       when: configure_krew
       tags: ['krew']
 
-    - include: tasks/extra-packages.yml
+    - include_tasks: tasks/chef.yml
+      when: configure_chef
+      tags: ['chef']
+
+    - include_tasks: tasks/extra-packages.yml
       tags: ['extra-packages']
 
     - name: Run configured post-provision ansible task files.
-      include: "{{ outer_item }}"
+      include_tasks: "{{ outer_item }}"
       loop_control:
         loop_var: outer_item
       with_fileglob: "{{ post_provision_tasks|default(omit) }}"
