--- a/tasks/krew-plugins.yml
+++ b/tasks/krew-plugins.yml
@@ -1,10 +1,10 @@
 ---
 - name: Test krew installation
-  command: kubectl krew
+  ansible.builtin.command: kubectl krew
   register: krew_installed
 
 - name: Install krew
-  command: |
+  ansible.builtin.shell: |
     set -x; cd "$(mktemp -d)" &&
     OS="$(uname | tr '[:upper:]' '[:lower:]')" &&
     ARCH="$(uname -m | sed -e 's/x86_64/amd64/' -e 's/\(arm\)\(64\)\?.*/\1\2/' -e 's/aarch64$/arm64/')" &&
@@ -14,11 +14,15 @@
     ./"${KREW}" install krew
   when: krew_installed != 0
 
-- name: list krew plugins
-  command: "{{ kubectl_util }} krew list"
+- name: List krew plugins
+  ansible.builtin.shell: |
+    export PATH="${PATH}:${HOME}/.krew/bin" &&
+    {{ kubectl_util }} krew list
+  args:
+    executable: /bin/zsh
   register: krew_plugin_list
 
-- name: Install Krew Plugins
-  command: "{{ kubectl_util }} install {{ item.path }}"
-  with_items: "{{ krew_plugins }}"
-  when: item.name not in krew_plugin_list.stdout|lower
+- name: Install krew Plugins
+  ansible.builtin.command: "{{ kubectl_util }} krew install {{ item }}"
+  loop: "{{ krew_plugins }}"
+  when: item not in krew_plugin_list.stdout|lower
