apps: add nvim to default

--- a/default.config.yml
+++ b/default.config.yml
@@ -66,6 +66,7 @@ homebrew_installed_packages:
   - nmap
   - node
   - nvm
+  - nvim
   - openssl
   - packer
   - pinentry-mac  # for GPG signing git commits
