--- a/default.config.yml
+++ b/default.config.yml
@@ -38,10 +38,11 @@ homebrew_installed_packages:
   - bash
   - bash-completion
   - coreutils
-  - cowsay
+  - curl
   - derailed/k9s/k9s
   - direnv
   - dive
+  - docutils
   - fluxcd/tap/flux
   - fzf
   - gh
@@ -50,6 +51,8 @@ homebrew_installed_packages:
   - gnu-tar
   - go
   - gpg
+  - grep
+  - harfbuzz
   - helm
   - httpie
   - iperf
@@ -70,6 +73,7 @@ homebrew_installed_packages:
   - openssl
   - packer
   - pinentry-mac  # for GPG signing git commits
+  - powerlevel10k
   - pre-commit
   - python3
   - readline
@@ -81,6 +85,7 @@ homebrew_installed_packages:
   - ssh-copy-id
   - stern
   - terraform-docs
+  - terraform-ls
   - tfenv
   - tflint
   - tgenv
@@ -90,6 +95,7 @@ homebrew_installed_packages:
   - wireshark
   - vault
   - vim
+  - virtualenv
   - yamllint
   - yq
 
@@ -111,7 +117,7 @@ homebrew_cask_apps:
   - google-chrome
   - gpg-suite
   - keybase
-  - macpass  # KeyPass Mac port
+  - keypassxc # KeyPass Mac port
   - microsoft-teams
   - rectangle
   - slack
@@ -198,15 +204,16 @@ vscode_extensions:
   - eriklynd.json-tools
   - golang.go
   - jmmeessen.jenkins-declarative-support
+  - johnpapa.vscode-peacock
   - hashicorp.terraform
   - karigari.chat
   - lostintangent.vsls-pomodoro
   - ms-azuretools.vscode-docker
   - ms-kubernetes-tools.vscode-kubernetes-tools
   - ms-python.python
-  - ms-vsliveshare.vsliveshare-pack
   - rebornix.ruby
   - redhat.vscode-yaml
+  - rust-lang.rust-analyzer
   - timonwong.shellcheck
 
 zsh_user_plugins:
