chore: add extra directories for dotfiles

--- a/main.yml
+++ b/main.yml
@@ -18,7 +18,9 @@
         - ~/.aws/cli
         - ~/.config/powerline
         - ~/.config/alacritty
+        - ~/.config/k9s
         - ~/.config/kitty
+        - ~/.config/nvim
       when: configure_dotfiles
 
   # roles:
