--- a/main.yml
+++ b/main.yml
@@ -23,15 +23,15 @@
         - ~/.config/nvim
       when: configure_dotfiles
 
-  # roles:
-  #   - role: geerlingguy.mac.homebrew
-  #     tags: ['homebrew']
-  #   - role: geerlingguy.dotfiles
-  #     when: configure_dotfiles
-  #     tags: ['dotfiles']
-  #   - role: geerlingguy.mas
-  #     when: mas_installed_apps
-  #     tags: ['mas']
+  roles:
+    - role: geerlingguy.mac.homebrew
+      tags: ['homebrew']
+    - role: geerlingguy.dotfiles
+      when: configure_dotfiles
+      tags: ['dotfiles']
+    - role: geerlingguy.mas
+      when: mas_installed_apps
+      tags: ['mas']
 
   tasks:
     - include_tasks: tasks/ansible-setup.yml
