--- a/default.config.yml
+++ b/default.config.yml
@@ -5,7 +5,7 @@ homebrew_prefix: "{{ (ansible_machine == 'arm64') | ternary('/opt/homebrew', '/u
 
 # set to yes to run certain tasks
 configure_aws: yes
-configure_chef: yes
+configure_chef: no
 configure_dotfiles: yes
 configure_helm: yes
 configure_krew: yes
@@ -118,16 +118,16 @@ homebrew_cask_apps:
   - font-hack-nerd-font
   - font-meslo-for-powerline
   - font-meslo-lg-nerd-font
-  - google-chrome
+#  - google-chrome
   - gpg-suite
   - keybase
-  - keypassxc # KeyPass Mac port
-  - microsoft-teams
+#  - keypassxc # KeyPass Mac port
+#  - microsoft-teams
   - rectangle
   - slack
   - tuple
   - visual-studio-code
-  - whatsapp
+#  - whatsapp
 
 # See `geerlingguy.mas` role documentation for usage instructions.
 mas_installed_apps: []
