--- a/main.yml
+++ b/main.yml
@@ -34,54 +34,57 @@
       tags: ['mas']
 
   tasks:
-    - include_tasks: tasks/ansible-setup.yml
+    - import_tasks: tasks/ansible-setup.yml
 
-    - include_tasks: tasks/sudoers.yml
+    - import_tasks: tasks/sudoers.yml
       when: configure_sudoers
 
-    - include_tasks: tasks/terminal.yml
+    - import_tasks: tasks/terminal.yml
       when: configure_terminal
       tags: ['terminal']
 
-    - include_tasks: tasks/osx.yml
+    - import_tasks: tasks/osx.yml
       when: configure_osx
       tags: ['osx']
 
-    - include_tasks: tasks/vim.yml
+    - import_tasks: tasks/vim.yml
       when: configure_vim
       tags: ['vim']
 
-    - include_tasks: tasks/vscode.yml
+    - import_tasks: tasks/vscode.yml
       when: configure_vscode
       tags: ['vscode']
 
-    - include_tasks: tasks/gpg.yml
+    - import_tasks: tasks/gpg.yml
       tags: ['gpg']
 
-    - include_tasks: tasks/zsh.yml
+    - import_tasks: tasks/zsh.yml
       tags: ['zsh']
 
-    - include_tasks: tasks/aws.yml
+    - import_tasks: tasks/aws.yml
       when: configure_aws
       tags: ['aws']
 
-    - include_tasks: tasks/helm-plugins.yml
+    - import_tasks: tasks/helm-plugins.yml
       when: configure_helm
       tags: ['helm']
 
-    - include_tasks: tasks/krew-plugins.yml
+    - import_tasks: tasks/krew-plugins.yml
       when: configure_krew
       tags: ['krew']
 
-    - include_tasks: tasks/chef.yml
+    - import_tasks: tasks/chef.yml
       when: configure_chef
       tags: ['chef']
 
-    - include_tasks: tasks/extra-packages.yml
+    - import_tasks: tasks/extra-packages.yml
       tags: ['extra-packages']
 
     - name: Run configured post-provision ansible task files.
-      include_tasks: "{{ outer_item }}"
-      loop_control:
-        loop_var: outer_item
-      with_fileglob: "{{ post_provision_tasks|default(omit) }}"
+      tags: ['post']
+      block:
+        - name: Run configured post-provision ansible task files.
+          include_tasks: "{{ outer_item }}"
+          loop_control:
+            loop_var: outer_item
+          with_fileglob: "{{ post_provision_tasks|default(omit) }}"
