fix: include gpg conf in dotfiles

--- a/default.config.yml
+++ b/default.config.yml
@@ -27,6 +27,7 @@ dotfiles_files:
   - .config/nvim
   - .config/powerline
   - .gitignore
+  - .gnupg/gpg-agent.conf
   - .osx
   - .p10k.zsh
   - .ssh/config
