fix: add kubelogin to defaults

--- a/default.config.yml
+++ b/default.config.yml
@@ -39,6 +39,7 @@ homebrew_installed_packages:
   - autoconf
   - awscli
   - aws-shell
+  - Azure/kubelogin/kubelogin
   - azure-cli
   - bash
   - bash-completion
