--- a/default.config.yml
+++ b/default.config.yml
@@ -208,20 +208,30 @@ vscode_extensions:
   - davidanson.vscode-markdownlint
   - eamodio.gitlens
   - eriklynd.json-tools
+  - github.copilot
+  - github.copilot-chat
   - golang.go
   - grafana.vscode-jsonnet
   - jmmeessen.jenkins-declarative-support
   - johnpapa.vscode-peacock
+  - hashicorp.hcl
   - hashicorp.terraform
   - karigari.chat
   - lostintangent.vsls-pomodoro
+  - ms-azuretools.vscode-azureterraform
   - ms-azuretools.vscode-docker
   - ms-kubernetes-tools.vscode-kubernetes-tools
   - ms-python.python
-  - rebornix.ruby
+  - ms-python.vscode-pylance
+  - ms-vsliveshare.vslives
   - redhat.vscode-yaml
   - rust-lang.rust-analyzer
+  - shopify.ruby-extensions-pack
+  - shopify.ruby-lsp
+  - sorbet.sorbet-vscode-extension
   - timonwong.shellcheck
+  - tuxtina.json2yaml
+  - weaveworks.vscode-gitops-tools
 
 zsh_user_plugins:
   - zsh-autosuggestions
