--- a/default.config.yml
+++ b/default.config.yml
@@ -118,6 +118,7 @@ homebrew_cask_apps:
   - font-hack-nerd-font
   - font-meslo-for-powerline
   - font-meslo-lg-nerd-font
+  - ghostty
 #  - google-chrome
   - gpg-suite
   - keybase
