fix(ghostty): add config directory create

--- a/main.yml
+++ b/main.yml
@@ -18,6 +18,7 @@
         - ~/.aws/cli
         - ~/.config/powerline
         - ~/.config/alacritty
+        - ~/.config/ghostty
         - ~/.config/k9s
         - ~/.config/kitty
         - ~/.config/nvim
