feat(git): add git config scripts to loop

--- a/main.yml
+++ b/main.yml
@@ -19,6 +19,7 @@
         - ~/.config/powerline
         - ~/.config/alacritty
         - ~/.config/ghostty
+        - ~/.config/git
         - ~/.config/k9s
         - ~/.config/kitty
         - ~/.config/nvim
